# App-Mamitas

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/GCPDS/mamitas/: BaseDeDatosActivity.kt  ChartActivity.kt  FileBrowserActivity.kt  FolderActivity.kt  FormularioActivity.kt  ImageViewActivity.kt  MainActivity.kt  MamitasAppActivity.kt  NewPatientActivity.kt  PlotActivity.kt  ResultActivity.kt  ResultadosActivity.kt
app/src/main/python/: plot.py  process_image.py
app/src/main/res/drawable/: ic_bar_chart.xml  ic_card_travel.xml  ic_dynamic_form.xml  ic_image_search.xml  ic_restart_alt.xml
app/src/main/res/layout/: activity_base_de_datos.xml  activity_chart.xml  activity_folder.xml  activity_formulario.xml  activity_main.xml  activity_mamitas_app.xml  activity_plot.xml  activity_result.xml  activity_resultados.xml  item_patient.xml
app/src/main/res/menu/: drawer_menu.xml
app/src/main/res/values/: strings.xml  styles.xml
